@startuml
class monkey.MuscleMonkey {
- int POWER_UP
+ <<Create>> MuscleMonkey(int,int,int)
+ void attack(BaseMonkey)
+ void buff()
+ String getType()
}
class monkey.BaseMonkey {
- int maxHP
- int hp
- int atk
- int def
+ <<Create>> BaseMonkey()
+ <<Create>> BaseMonkey(int,int,int)
+ void attack(BaseMonkey)
+ String getType()
+ String toString()
+ int getMaxHp()
+ void setMaxHP(int)
+ int getHp()
+ void setHp(int)
+ int getAtk()
+ void setAtk(int)
+ int getDef()
+ void setDef(int)
+ boolean equals(Object)
+ int hashCode()
}
class monkey.Ape {
+ <<Create>> Ape(int,int,int)
+ void attack(BaseMonkey)
+ void attackAOE()
+ String getType()
}
class monkey.MommyMonkey {
+ <<Create>> MommyMonkey(int,int,int)
+ void attack(BaseMonkey)
+ void birth()
+ String getType()
}
class monkey.UgabugagaMonkey {
- int DEBUFF
- int HEAL
+ <<Create>> UgabugagaMonkey(int,int,int)
+ void attack(BaseMonkey)
+ void heal(BaseMonkey)
+ String getType()
}


monkey.BaseMonkey <|-- monkey.MuscleMonkey
monkey.BaseMonkey <|-- monkey.Ape
monkey.BaseMonkey <|-- monkey.MommyMonkey
monkey.BaseMonkey <|-- monkey.UgabugagaMonkey
@enduml